Add point endpoint (interpolation), Add generator (#3)
* Prepare query params endpoints

* Add new query params to endpoints

* Remove debug messages

* Refactor code

* Remove unused class

* Refactor code, Add converters and assemblers

* Refactor code, Update API Docs, Add "AirStatus" to output data

* Add returning type to SensorResponse

* Add endpoints to change station name, address, Change response models, Update API docs

* Refactor code, extract air quality methods to util class

* Add new query modes

* Refactor code, Update API docs

* Refactor API, nest responses in data: and change error responses

* Update API docs

* Add new endpoint that interpolates sensor values

* Add stations generator

* Fix generator

* Update docs

* Add info endpoint
