# src/main/java/pl/edu/agh/airsystem/model/api/sensors/TimespanResponse.java
@@ -1,0 +1,17 @@
+package pl.edu.agh.airsystem.model.api.sensors;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class TimespanResponse {
+    private LocalDateTime start;
+    private LocalDateTime end;
+}
